--- a/breakfast.html
+++ b/breakfast.html
@@ -16,38 +16,30 @@
 	<nav class="cd-side-navigation">
 		<ul>
 			<li>
-			<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
-				<img src="img/logo.svg" alt="" width="80" height="17" />
-			</a>
+				<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
+					<img src="img/logo.svg" alt="" width="80" height="17">
+				</a>
 			</li>
-	
+
 			<li>
-			<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
-				<img src="img/boxes.svg" alt="" width="80" height="37" />Our
-				boxes</a
-			>
+				<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
+					<img src="img/boxes.svg" alt="" width="80" height="37">
+					our boxes
+				</a>
 			</li>
-	
+
 			<li>
-			<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
-				<img
-				src="img/Recipes.svg"
-				alt=""
-				width="80"
-				height="47"
-				/>Recipes</a
-			>
+				<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
+					<img src="img/Recipes.svg" alt="" width="80" height="47">
+					recipes
+				</a>
 			</li>
-	
+
 			<li>
-			<a href="../Nuesli_v1/account.html" data-menu="account">
-				<img
-				src="img/Account.svg"
-				alt=""
-				width="80"
-				height="47"
-				/>Account</a
-			>
+				<a href="../Nuesli_v1/account.html" data-menu="account">
+					<img src="img/Account.svg" alt="" width="80" height="47">
+					account
+				</a>
 			</li>
 		</ul>
 	</nav>
