--- a/dessert.html
+++ b/dessert.html
@@ -16,42 +16,34 @@
 	<nav class="cd-side-navigation">
 		<ul>
 			<li>
-			<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
-				<img src="img/logo.svg" alt="" width="80" height="17" />
-			</a>
+				<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
+					<img src="img/logo.svg" alt="" width="80" height="17">
+				</a>
 			</li>
-	
+
 			<li>
-			<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
-				<img src="img/boxes.svg" alt="" width="80" height="37" />Our
-				boxes</a
-			>
+				<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
+					<img src="img/boxes.svg" alt="" width="80" height="37">
+					our boxes
+				</a>
 			</li>
-	
+
 			<li>
-			<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
-				<img
-				src="img/Recipes.svg"
-				alt=""
-				width="80"
-				height="47"
-				/>Recipes</a
-			>
+				<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
+					<img src="img/Recipes.svg" alt="" width="80" height="47">
+					recipes
+				</a>
 			</li>
-	
+
 			<li>
-			<a href="../Nuesli_v1/account.html" data-menu="account">
-				<img
-				src="img/Account.svg"
-				alt=""
-				width="80"
-				height="47"
-				/>Account</a
-			>
+				<a href="../Nuesli_v1/account.html" data-menu="account">
+					<img src="img/Account.svg" alt="" width="80" height="47">
+					account
+				</a>
 			</li>
 		</ul>
-		</nav>
-	
+	</nav>
+		
 	<main class="cd-main">
 		<section class="cd-section services visible">
 			<header>
@@ -65,9 +57,9 @@
 						<h1>desserts</h1>
 						<div class="btn-grp">
 							<a href="../Nuesli_v1/breakfast.html" class="button draw meet">
-								Oatmeal Chocolate Bars</a>
-							<a href="../Nuesli_v1/snack.html" class="button draw meet">Black Bottom Oatmeal Pie</a>
-							<a href="../Nuesli_v1/dessert.html" class="button draw meet">Cinnamon Swirl With Oatmeal Crust</a>
+								Strawberry Yogurt Parfait</a>
+							<a href="../Nuesli_v1/snack.html" class="button draw meet">Hearty Banana Muffin</a>
+							<a href="../Nuesli_v1/dessert.html" class="button draw meet">French Toast Waffles</a>
 						</div>
 					</div>
 				</div>
