--- a/lunch.html
+++ b/lunch.html
@@ -16,38 +16,30 @@
 	<nav class="cd-side-navigation">
 		<ul>
 			<li>
-			<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
-				<img src="img/logo.svg" alt="" width="80" height="17" />
-			</a>
+				<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
+					<img src="img/logo.svg" alt="" width="80" height="17">
+				</a>
 			</li>
-	
+
 			<li>
-			<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
-				<img src="img/boxes.svg" alt="" width="80" height="37" />Our
-				boxes</a
-			>
+				<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
+					<img src="img/boxes.svg" alt="" width="80" height="37">
+					our boxes
+				</a>
 			</li>
-	
+
 			<li>
-			<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
-				<img
-				src="img/Recipes.svg"
-				alt=""
-				width="80"
-				height="47"
-				/>Recipes</a
-			>
+				<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
+					<img src="img/Recipes.svg" alt="" width="80" height="47">
+					recipes
+				</a>
 			</li>
-	
+
 			<li>
-			<a href="../Nuesli_v1/account.html" data-menu="account">
-				<img
-				src="img/Account.svg"
-				alt=""
-				width="80"
-				height="47"
-				/>Account</a
-			>
+				<a href="../Nuesli_v1/account.html" data-menu="account">
+					<img src="img/Account.svg" alt="" width="80" height="47">
+					account
+				</a>
 			</li>
 		</ul>
 	</nav>
@@ -66,9 +58,9 @@
 						<h1>lunch</h1>
 						<div class="btn-grp">
 							<a href="../Nuesli_v1/breakfast.html" class="button draw meet">
-								Bueberry Oatmeal Bread</a>
-							<a href="../Nuesli_v1/snack.html" class="button draw meet">Oatmeal with Soft-Boiled Egg</a>
-							<a href="../Nuesli_v1/dessert.html" class="button draw meet">Chickpea Oat Veggie Burger</a>
+								Strawberry Yogurt Parfait</a>
+							<a href="../Nuesli_v1/snack.html" class="button draw meet">Hearty Banana Muffin</a>
+							<a href="../Nuesli_v1/dessert.html" class="button draw meet">French Toast Waffles</a>
 						</div>
 					</div>
 				</div>
