--- a/weekly.html
+++ b/weekly.html
@@ -1,109 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="no-js">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link
-      href="http://fonts.googleapis.com/css?family=PT+Sans:400,700"
-      rel="stylesheet"
-      type="text/css"
-    />
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/modernizr.js"></script>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
+	<script src="js/modernizr.js"></script> 
+  	
+	<title>Nuesli</title>
+</head>
+<body>
+	<nav class="cd-side-navigation">
+		<ul>
+			<li>
+				<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
+					<img src="img/logo.svg" alt="" width="80" height="17">
+				</a>
+			</li>
 
-    <title>Nuesli</title>
-  </head>
-  <body>
-    <nav class="cd-side-navigation">
-      <ul>
-        <li>
-          <a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
-            <img src="img/logo.svg" alt="" width="80" height="17" />
-          </a>
-        </li>
+			<li>
+				<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
+					<img src="img/boxes.svg" alt="" width="80" height="37">
+					our boxes
+				</a>
+			</li>
 
-        <li>
-          <a href="../Nuesli_v1/boxes.html" data-menu="boxes">
-            <img src="img/boxes.svg" alt="" width="80" height="37" />Our
-            boxes</a
-          >
-        </li>
+			<li>
+				<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
+					<img src="img/Recipes.svg" alt="" width="80" height="47">
+					recipes
+				</a>
+			</li>
 
-<<<<<<< HEAD
-        <li>
-          <a href="../Nuesli_v1/recipes.html" data-menu="recipes">
-            <img
-              src="img/Recipes.svg"
-              alt=""
-              width="80"
-              height="47"
-            />Recipes</a
-          >
-        </li>
-
-        <li>
-          <a href="../Nuesli_v1/account.html" data-menu="account">
-            <img
-              src="img/Account.svg"
-              alt=""
-              width="80"
-              height="47"
-            />Account</a
-          >
-        </li>
-      </ul>
-    </nav>
-
-    <main class="cd-main">
-      <section class="cd-section services visible">
-        <header>
-          <div class="page">
-            <div class="cd-subpage">
-              <img
-                src="img/Box_02.png"
-                alt="box"
-                height="400"
-                width="400"
-                align="left"
-              />
-              <div class="fruits">
-                <img
-                  src="img/Fruits/Fruits_02.png"
-                  alt="Almond"
-                  height="70%"
-                  width="70%"
-                />
-              </div>
-              <div class="cd-starter">
-                <h4>weekly box</h4>
-                <h5>comes with 7 bottles</h5>
-                <p>
-                  Our Weekly Box offers a variety of options to choose from.
-                  This box are for those who would like the flexibility of
-                  choosing when to order their box. Our Weekly Box offers 7
-                  bottles with the option of mixing and matching.
-                </p>
-                <div class="btn-grp">
-                  <a href="../Nuesli_v1/weekly.html" class="button draw meet"
-                    >ADD TO CART</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </header>
-      </section>
-    </main>
-
-    <div id="cd-loading-bar" data-scale="1" class="services"></div>
-    <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/velocity.min.js"></script>
-    <script src="js/main.js"></script>
-  </body>
-=======
 			<li>
 				<a href="../Nuesli_v1/account.html" data-menu="account">
 					<img src="img/Account.svg" alt="" width="80" height="47">
@@ -119,16 +50,16 @@
 			<header>
 				<div class="page">
 				<div class="cd-subpage">
-					<img src="img/Box_02.png" alt="box" height="400" width="400" align="left">
+					<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
 					<div class="fruits">
-						<img src="img/Fruits/Fruits_03.png" alt="Almond" height="70%" width="70%">
+						<img src="img/Fruits/Fruits_02.png" alt="Almond" height="70%" width="70%">
 					</div>
 					<div class="cd-starter">
-						<h4>monthly box</h4>
-						<h5>comes with 28 bottles</h5>
-						<p>Our Monthly Box offers specially made flavors, this is for those would like the convience of having all their bottles shipped to them. 28 may get a bit bland after a week or two, we now offer custimization for each day of the month. By downloading our app, you will be able to spice up each of your bottles.</p>
+						<h4>weekly box</h4>
+						<h5>comes with 7 bottles</h5>
+						<p>Our Weekly Box offers a variety of options to choose from. This box are for those who would like the flexibility of choosing when to order their box. Our Weekly Box offers 7 bottles with the option of mixing and matching.</p>
 						<div class="btn-grp">
-							<a href="/monthly.html" class="button draw meet">ADD TO CART</a>
+							<a href="../Nuesli_v1/weekly.html" class="button draw meet">ADD TO CART</a>
 						</div>
 					</div>
 				</div>
@@ -142,5 +73,4 @@
 <script src="js/velocity.min.js"></script>
 <script src="js/main.js"></script> 
 </body>
->>>>>>> 6ee24518fe761844e09ab9306683c3a95fdfdab1
 </html>
